Fix to for loop styles. Single description fix
Addressed issue on the single page not showing the right styles applied.

Addressed an issue found where the returned description text was non-english. Filtered and also included all description texts for all game versions.

--- a/styles/TypeColors.scss
+++ b/styles/TypeColors.scss
@@ -4,13 +4,13 @@
     .type {
         &__#{nth($type-names, $i)} {
             &__font {
-                color: #{nth($type-names, $i)};
+                color: #{nth($types, $i)};
             }
             &__background {
-                background-color: #{nth($type-names, $i)};
+                background-color: #{nth($types, $i)};
             }
             &__border {
-                border-color: #{nth($type-names, $i)};
+                border-color: #{nth($types, $i)};
             }
         }
     }
